--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.10.0"
+    "react-router": "^7.10.0",
+    "vite-plugin-graphql-loader": "^4.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
