--- a/apps/media-club-api/Cargo.toml
+++ b/apps/media-club-api/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
+aws-sdk-rdsdata = "1.93.0"
 axum = "0.8.8"
 lambda_http = "1.0.0"
 serde = "1.0.228"
