--- a/apps/media-club-api/Cargo.toml
+++ b/apps/media-club-api/Cargo.toml
@@ -6,12 +6,14 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1.89"
 aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
-aws-sdk-rdsdata = "1.93.0"
+aws-sdk-dynamodb = "1.101.0"
 axum = "0.8.8"
 chrono = { version = "0.4.42", features = ["serde"] }
+dotenvy = "0.15.7"
 lambda_http = "1.0.0"
 serde = { version = "1.0.228", features = ["derive"] }
+serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"] }
 serde_json = "1.0.145"
 strum = "0.27.2"
 strum_macros = "0.27.2"
-tokio = { version = "1", features = ["macros"] }
+tokio = { version = "1", features = ["full"] }
