--- a/apps/media-club-api/Cargo.toml
+++ b/apps/media-club-api/Cargo.toml
@@ -17,3 +17,5 @@ serde_json = "1.0.145"
 strum = "0.27.2"
 strum_macros = "0.27.2"
 tokio = { version = "1", features = ["full"] }
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
