Connecting lambda backend with frontend

--- a/apps/media-club-api/Makefile
+++ b/apps/media-club-api/Makefile
@@ -4,10 +4,14 @@
 db:
 	docker run -d -p 8000:8000 amazon/dynamodb-local
 
-# Seed the media table
+# Seed the given table
 seed:
 	cargo run --bin seed_local_db -- $(TABLE)
 
 # Run the local API
 dev:
 	cargo lambda watch
+
+# Query the lambda api
+query:
+	curl http://localhost:9000/lambda-url/media-club-api/$(URL)
