--- a/apps/web-ui/package.json
+++ b/apps/web-ui/package.json
@@ -8,6 +8,7 @@
     "watch": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
     "preview": "vite preview"
   },
   "dependencies": {
