connecting auth to frontend, disallowing duplicate users, fixing zoom issues with images

--- a/apps/web-ui/.env.development
+++ b/apps/web-ui/.env.development
@@ -1,3 +1,5 @@
 # IMPORTANT: THIS IS A PUBLIC FILE, DO NOT STORE ANY SECRET OR PRIVATE INFORMATION IN THEM
 
 VITE_MEDIA_CLUB_API_BASE_URL=http://localhost:9000/lambda-url/media-club-api
+VITE_ANILIST_APP_CLIENT_ID=33950
+VITE_ANILIST_APP_REDIRECT_URI=http://localhost:5173/auth/callback
