--- a/apps/web-ui/package.json
+++ b/apps/web-ui/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.11.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-error-boundary": "^6.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.10.0"
   },
